# home-ops-cli

./: .gitignore  .renovaterc.json5  Dockerfile  build-and-publish.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-image.yaml  release.yaml
home_ops_cli/: options.py  utils.py  version.py
home_ops_cli/aws/: fetch_aws_ips.py  s3_manager.py  textual_app.py
home_ops_cli/github/: delete_workflow_runs.py
home_ops_cli/kubernetes/: wait.py
home_ops_cli/kubevirt/manager/: manager.py
home_ops_cli/kubevirt/vmexport/: __init__.py  download.py  test_image.py
home_ops_cli/talos/: regen_talosconfig.py
home_ops_cli/vault/: backup_raft_snapshot.py  bootstrap.py  login.py  restore_raft_snapshot.py
home_ops_cli/vault/pki/: rotate_issuing.py
