[project]
name = "home-ops-cli"
version = "0.4.47"
description = "A CLI tool for managing home operations tasks."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "d4rkfella", email = "georgi.panov@darkfellanetwork.com" }
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "hvac==2.4.0",
    "ruamel.yaml==0.18.17",
    "kubernetes-asyncio==34.3.3",
    "kr8s==0.20.14",
    "aiohttp==3.13.2",
    "aiofiles==25.1.0",
    "aiogzip==1.1.0",
    "textual==6.11.0",
    "boto3==1.42.19",
    "botocore[crt]",
    "inquirer==3.4.1",
    "pyusb==1.3.1",
    "textual-speedups==0.2.1",
    "typer==0.21.0",
    "kubevirt-py==1.7.0",
    "validators==0.35.0",
    "mypy-boto3-s3==1.42.16"
]

[project.scripts]
home-ops-cli = "home_ops_cli.main:app"

[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
types-hvac = "2.4.0.20251115"
boto3-stubs = "1.42.19"
